syntax = "proto3";

package user;

option go_package = "github.com/sergicanet9/go-hexagonal-api/proto/gen/v1/go/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service UserService {
    rpc Login(LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/users/login"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Login user"
            description: "Logs in a user"
        };
    }

    rpc Create(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/users"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Create user"
            description: "Creates a new user"
        };
    }

    rpc CreateMany(CreateManyUsersRequest) returns (CreateManyUsersResponse) {
        option (google.api.http) = {
            post: "/users/many"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Create many users"
            description: "Creates multiple users atomically"
        };
    }

    rpc GetAll(google.protobuf.Empty) returns (GetAllUsersResponse) {
        option (google.api.http) = {
            get: "/users"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get all users"
            description: "Gets all the users"
            security: {
                security_requirement: { key: "Bearer" value: {} }
            }
        };
    }

    rpc GetByEmail(GetUserByEmailRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/users/email/{email}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get user by email"
            description: "Gets a user by email"
            security: {
                security_requirement: { key: "Bearer" value: {} }
            }
        };
    }

    rpc GetByID(GetUserByIDRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/users/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get user by ID"
            description: "Gets a user by ID"
            security: {
                security_requirement: { key: "Bearer" value: {} }
            }
        };
    }

    rpc Update(UpdateUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            patch: "/users/{id}"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Update user"
            description: "Updates a user"
            security: {
                security_requirement: { key: "Bearer" value: {} }
            }
        };
    }

    rpc GetClaims(google.protobuf.Empty) returns (GetClaimsResponse) {
        option (google.api.http) = {
            get: "/claims"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get user claims"
            description: "Gets all claims"
            security: {
                security_requirement: { key: "Bearer" value: {} }
            }
        };
    }

    rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/users/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Delete user"
            description: "Deletes a user"
            security: {
                security_requirement: { key: "Bearer" value: {} }
            }
        };
    }
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    GetUserResponse user = 1;
    string token = 2;
}

message CreateUserRequest {
    string name = 1;
    string surnames = 2;
    string email = 3;
    string password = 4;
    repeated int32 claim_ids = 5;
}

message CreateUserResponse {
    string id = 1;
}

message CreateManyUsersRequest {
    repeated CreateUserRequest users = 1;
}

message CreateManyUsersResponse {
    repeated string ids = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByIDRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string surnames = 3;
    string email = 4;
    repeated int32 claim_ids = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message UpdateUserRequest {
    string id = 1;
    optional string name = 2;
    optional string surnames = 3;
    optional string email = 4;
    optional string old_password = 5;
    optional string new_password = 6;
    optional ClaimIds claims = 7;
}

message ClaimIds {
    repeated int32 ids = 1;
}

message GetAllUsersResponse {
    repeated GetUserResponse users = 1;
}

message GetClaimsResponse {
    repeated Claim claims = 1;
}

message Claim {
    int32 id = 1;
    string value = 2;
}

message DeleteUserRequest {
    string id = 1;
}

